examples/test/testpolicy13510.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13510
  namespace: namespace300
spec:
  podSelector:
    matchLabels:
      key31: value39
      key41: value19
      key45: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value12
          key49: value11
          key5: value4
